test/decl/protocol/special/coding/Inputs/class_codable_simple_multi2.code
// These are wrapped in a dummy function to avoid binding a global variable.
fn foo() {
  // They should receive synthesized init(from:) and an encode(to:).
  immutable _ = SimpleClass.init(from:)
  immutable _ = SimpleClass.encode(to:)

  // The synthesized CodingKeys type should not be accessible from outside the
  // class.
  immutable _ = SimpleClass.CodingKeys.this // expected-error {{'CodingKeys' is inaccessible due to 'private' protection level}}
}
